workflow - added missing dep

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -97,7 +97,7 @@ jobs:
       - name: Install system dependencies
         run: |
           sudo apt update
-          sudo apt install gir1.2-appindicator3-0.1 libgirepository1.0-dev python3-tk
+          sudo apt install gir1.2-appindicator3-0.1 libgirepository1.0-dev python3-tk libayatana-appindicator3-dev
 
       - name: Install project dependencies
         run: |
